# QuantumCore

./: .gitattributes  .gitignore  .gitmodules  01-architecture-overview.md  CMakeLists.txt  Quantum Language.txt  README.md  STRUCTURE.md  build.bat  build_errors.txt  build_log.txt  ide.html  index copy.html  index.html  index.js  language.html  memory_profile.txt  package-lock.json  package.json  quantum.bat  test.sa  test_results.txt  vercel.json  webpack.config.js
QuantumDocsSyncer/: .gitmodules
Website/: index.html  language.html
Website/styles/: ide.css  styles.css
algorithms/: test_results.txt
applications/: test_results.txt
design/: Lexer.h.md  explicit-keyword-in-cpp.md
docs/: ROADMAP.md  SECURITY.md
docs/design/: hello.sa
examples/: C.sa  IO Operations.sa
examples/Python/: IfElse.sa
extensions/: README.md  package.json
extensions/quantum-language/: package.json
extensions/syntaxes/: quantum.tmlanguage.json
include/: AST.h  Interpreter.h  Lexer.h  Parser.h  README.md  Token.h  Value.h
include/AST/: README.md
lib/: github.js  huggingface.js  models.js  queue.js
public/: index.html
quantum/: LICENSE  README.md  build-fast.bat  build_log.txt  memory_leak_report.txt  qrun.bat
routes/: stats.js  stream.js  trigger.js  webhook.js
src/: App.js  Compiler.cpp.md  Disassembler.cpp  Interpreter.cpp  Interpreter.cpp.md  Lexer.cpp  Lexer.cpp.md  Parser.cpp  Parser.cpp.md  Serializer.cpp  Token.cpp.md  TypeChecker.cpp.md  Value.cpp  Value.cpp.md  Vm.cpp  index.css  main.cpp  main.cpp.md
src/main/: main.md  (+8 more)
styles/: language.css
tests/: User Configuration Manager.sa  dungeon.sa
(+207 files in other folders)
